...
                        )
                    ) {
                        onSubmit()
                    }
                }
            },
            modifier = Modifier.fillMaxWidth().testTag("input_field"),
            label = { Text(text = stringResource(R.string.card_label_your_translation)) },
            singleLine = true,
            enabled = hasCards,
            trailingIcon = {
                if (contract.supportsVoiceInput) {
                    IconButton(
...
